Implemented only displaying of the notifications web page

--- a/medication/medication.manager.servlet.ui.configuration/src/main/resources/notification.html
+++ b/medication/medication.manager.servlet.ui.configuration/src/main/resources/notification.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<script type="text/javascript">
+<!--<script type="text/javascript">
     /*
      define notification rules, example:
      */
@@ -43,7 +43,7 @@
     /* submit pairs:   1_12:missed 1_12:threshold 1_12:shortage 1_12:dose
     (if is not selected it will not be included in the parameters in the servlet
      */
-</script>
+</script>-->
 <div class="cont">
     <div>
         <h1>universAAL<br/>Medication Manager Service<br/>
