added handle select user servlet and display medicines servlet and handle medicine servlet and the corresponding resourecs (html, js, css) (not finished) small bug fixes

--- a/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/user.html
+++ b/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/user.html
@@ -16,18 +16,18 @@
 </head>
 
 <body>
-<!--<script type="text/javascript">
+<script type="text/javascript">
 	/*In for cycle - add all users, example:
 	 users.push({'id':'user1', "name": "User Name"});
 	 */
 	users.push({'id':'user1', "name":"Elena Ivanova"});
 	users.push({'id':'user2', "name":"Polq Ivanova"});
-</script>-->
+</script>
 
 <div class="cont"><div>
 	<h1>universAAL<br/>Medication Medical Service</h1>
 
-	<form name="prescriptions" action="" method="post">
+	<form name="select_user" action="" method="post">
 		<label>Select a user to process</label>
 		<select name="user">
 			<option value="userID">user name</option>
