add logic behind select medicine web page added UNITS in the medicine database table and fix all relaled java code (entities, daos, etc.) added pill dispenser instructions to the configuration resources project small bug fixes

--- a/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/medicine.html
+++ b/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/medicine.html
@@ -18,13 +18,13 @@
 </head>
 
 <body>
-<script type="text/javascript">
+<!--<script type="text/javascript">
 	/*In for cycle - add all users, example:
 	 medicines.push({'id':'med1', "name": "Medicine Name"});
 	 */
 	medicines.push({'id':'med1', "name":"Aspirin", "unit":"pills"});
 	medicines.push({'id':'med2', "name":"Centrum", "unit":"drops"});
-</script>
+</script>-->
 
 <div class="cont">
     <div>
