--- a/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/success.html
+++ b/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/success.html
@@ -1,21 +1,21 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-		"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xml:lang="en-gb" xmlns="http://www.w3.org/1999/xhtml" lang="en-gb">
 <head>
 
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<title>universALL - Medication Medical Service: Login</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>universALL - Medication Medical Service: Login</title>
 
-	<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 
-	<script type="text/javascript" src="js/common.js"></script>
-	<script type="text/javascript">
-		var msg = "";
-		$(function () {
-			$(".msg").html(msg);
-		});
-	</script>
-	<link rel="stylesheet" href="css/common.css" type="text/css">
+    <script type="text/javascript" src="js/common.js"></script>
+    <script type="text/javascript">
+        var msg = "";
+        $(function () {
+            $(".msg").html(msg);
+        });
+    </script>
+    <link rel="stylesheet" href="css/common.css" type="text/css">
 </head>
 
 <body>
@@ -23,13 +23,18 @@
 	var msg = "bla bla";
 </script>-->
 <div class="cont">
-	<div>
-		<h1>universAAL<br/>Medication Medical Service</h1>
+    <div>
+        <h1>universAAL<br/>Medication Medical Service</h1>
 
-		<h2>csfswfsf</h2>
+        <h2>csfswfsf</h2>
 
-		<div class="msg left"></div>
-	</div>
+        <div class="msg left"></div>
+         <br>
+        <form name="success" action="" method="post">
+            <button name="back" class="left">Back</button>
+            <button name="logout" class="right">Log out</button>
+        </form>
+    </div>
 </div>
 
 </body>
