removed form element form intakes related files (html, js, css)

--- a/medication/medication.manager.servlet.ui.review/src/main/resources/intakes.html
+++ b/medication/medication.manager.servlet.ui.review/src/main/resources/intakes.html
@@ -19,7 +19,7 @@
 <body>
 <script type="text/javascript">
     /*
-     define parameters, example:
+     define intakes, example:
      */
     intakes = {
         "id1": {
@@ -48,27 +48,25 @@
         <h1>universAAL<br/>Medication Manager Service<br/>
             Intakes</h1>
 
-        <form name="parameters" action="" method="post">
-            <table id="parameters" class="t1">
-                <tr>
-                    <th>Date</th>
-                    <th>Time</th>
-                    <th>Medication</th>
-                    <th>Status</th>
-                </tr>
-                <tr class="odd">
-                    <td colspan="5" align="center">No Parameters</td>
-                </tr>
-                <tr class="templ">
-                    <td nowrap></td>
-                    <td></td>
-                    <td nowrap></td>
-                    <td></td>
-                </tr>
-            </table>
-            <button class="right" name="logout">Logout</button>
-            <button name="back" class="left">Back</button>
-        </form>
+        <table id="intakes" class="t1">
+            <tr>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Medication</th>
+                <th>Status</th>
+            </tr>
+            <tr class="odd">
+                <td colspan="5" align="center">No Parameters</td>
+            </tr>
+            <tr class="templ">
+                <td nowrap></td>
+                <td></td>
+                <td nowrap></td>
+                <td></td>
+            </tr>
+        </table>
+        <button class="right" name="logout">Logout</button>
+        <button name="back" class="left">Back</button>
     </div>
 </div>
 
