added two button next and prev week

--- a/medication/medication.manager.servlet.ui.review/src/main/resources/intakes.html
+++ b/medication/medication.manager.servlet.ui.review/src/main/resources/intakes.html
@@ -48,6 +48,9 @@
         <h1>universAAL<br/>Medication Manager Service<br/>
             Intakes</h1>
 
+        <button class="rightupper" name="logout"> &lt;&lt;week</button>
+        <button name="back" class="leftupper">&gt;&gt;week</button>
+
         <table id="intakes" class="t1">
             <tr>
                 <th>Date</th>
