--- a/medication/medication.manager.servlet.ui.review/src/main/resources/intakes.html
+++ b/medication/medication.manager.servlet.ui.review/src/main/resources/intakes.html
@@ -47,19 +47,14 @@
 
     };
 </script>-->
-<div class="cont">
+<div class="cont intakes">
     <div>
         <h1>universAAL<br/>Medication Manager Service<br/>
-            Intakes for
-
-            <script type="text/javascript">
-                document.write(user);
-            </script>
-
+            Intakes for  <span class="name"></span>
         </h1>
 
-        <button name="logout" class="rightupper">&gt;&gt;week</button>
-        <button name="back" class="leftupper">week&lt;&lt;</button>
+        <button name="prev" class="leftupper">&lt;&lt; week</button>
+        <button name="next" class="rightupper">week &gt;&gt;</button>
 
         <table id="intakes" class="t1">
             <tr>
