finished log and plan review usecase

--- a/medication/medication.manager.servlet.ui.review/src/main/resources/intakes.html
+++ b/medication/medication.manager.servlet.ui.review/src/main/resources/intakes.html
@@ -50,11 +50,13 @@
 <div class="cont intakes">
     <div>
         <h1>universAAL<br/>Medication Manager Service<br/>
-            Intakes for  <span class="name"></span>
+            Intakes for <span class="name"></span>
         </h1>
 
         <button name="prev" class="leftupper">&lt;&lt; week</button>
         <button name="next" class="rightupper">week &gt;&gt;</button>
+
+        <span class="msg drun">Missing intakes for that week</span>
 
         <table id="intakes" class="t1">
             <tr>
