--- a/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/medicine.html
+++ b/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/medicine.html
@@ -18,27 +18,43 @@
 </head>
 
 <body>
-<!--<script type="text/javascript">
-	/*In for cycle - add all users, example:
-	 medicines.push({'id':'med1', "name": "Medicine Name"});
-	 */
-	medicines.push({'id':'med1', "name":"Aspirin", "unit":"pills"});
-	medicines.push({'id':'med2', "name":"Centrum", "unit":"drops"});
-</script>-->
+
+<script type="text/javascript">
+    /*In for cycle - add all users, example:
+     medicines.push({'id':'med1', "name": "Medicine Name"});
+     */
+    medicines.push({'id':'med1', "name":"Aspirin", "unit":"pills"});
+    medicines.push({'id':'med2', "name":"Centrum", "unit":"drops"});
+
+//    available_medicines.push({"name":"Centrum", "qty":2, "unit":"drops"});
+//    available_medicines.push({"name":"Aspirin", "qty":1, "unit":"pills"});
+</script>
+
 
 <div class="cont">
     <div>
         <h1>universAAL<br/>Medication Medical Service</h1>
-
+        <label>Curently available medicines</label>
+        <table class="t1">
+            <tr>
+                <th>Medicine</th>
+                <th style="width: 20%;">Quantity</th>
+                <th style="width: 20%;">Unit</th>
+            </tr>
+        </table>
+        <fieldset><legend>Select a medicine to be added as an inventory</legend>
         <form name="select_med" action="" method="post">
-            <label>Select a medicine to be added as an inventory</label>
-            <select name="medicine">
-                <option value="medicineID">medicine name</option>
-            </select>
-            <div><input type="text" name="quantity" size="4" value=""/><label name="unit"></label></div>
+
+
+            <div class="choose">
+                <select name="medicine">
+                    <option value="medicineID">medicine name</option>
+                </select>
+                <input type="text" name="quantity" size="4" value=""/><label name="unit"></label>
+            </div>
             <input type="submit" class="button left" name="process_medicine" value="Process medicine"/>
-            <button name="back" class="right">Back</button>
-        </form>
+            <button name="back" class="button right">Back</button>
+        </form></fieldset>
     </div>
 </div>
 
