Added available medicines (inventory) for a given user via the acquire medicine web app

--- a/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/medicine.html
+++ b/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/medicine.html
@@ -19,16 +19,16 @@
 
 <body>
 
-<script type="text/javascript">
+<!--<script type="text/javascript">
     /*In for cycle - add all users, example:
      medicines.push({'id':'med1', "name": "Medicine Name"});
      */
     medicines.push({'id':'med1', "name":"Aspirin", "unit":"pills"});
     medicines.push({'id':'med2', "name":"Centrum", "unit":"drops"});
 
-//    available_medicines.push({"name":"Centrum", "qty":2, "unit":"drops"});
-//    available_medicines.push({"name":"Aspirin", "qty":1, "unit":"pills"});
-</script>
+    available_medicines.push({"name":"Centrum", "qty":2, "unit":"drops"});
+    available_medicines.push({"name":"Aspirin", "qty":1, "unit":"pills"});
+</script>-->
 
 
 <div class="cont">
