--- a/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/success.html
+++ b/medication/medication.manager.servlet.ui.acquire.medicine/src/main/resources/success.html
@@ -26,7 +26,7 @@
     <div>
         <h1>universAAL<br/>Medication Medical Service</h1>
 
-        <h2>csfswfsf</h2>
+        <h2>Success!</h2>
 
         <div class="msg left"></div>
          <br>
