--- a/medication/medication.manager.servlet.ui/src/main/resources/new_prescription.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/new_prescription.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<title>universALL - Medication Medical Service: New Perscription</title>
+	<title>universALL - Medication Medical Service: New Prescription</title>
 
 	<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 	<script src="js/jquery-ui-1.10.2.custom.min.js"></script>
@@ -31,7 +31,7 @@
 	<div>
 		<h1>universAAL<br/>Medication Medical Service</h1>
 
-		<h2>New perscription details</h2>
+		<h2>New prescription details</h2>
 
 		<form name="save_prescription" action="" method="post">
 			<table>
@@ -88,7 +88,7 @@
 				</tr>
 			</table>
 			<button name="add_medicine">Add medicine</button>
-			<input type="submit" name="save_perscription" value="Save Perscription" class="button"/>
+			<input type="submit" name="save_perscription" value="Save Prescription" class="button"/>
 			<button name="back" class="right">Cancel</button>
 		</form>
 
